--- a/views/partials/encounter.ejs
+++ b/views/partials/encounter.ejs
@@ -1,4 +1,4 @@
 <div id="encounter">
     <h1>Build an Encounter</h1>
-    <a href="/encounters"><img src="https://i.imgur.com/7RoB4Dn.png" width="150" height="150"></a>
+    <a href="/encounters/new"><img src="https://i.imgur.com/7RoB4Dn.png" width="150" height="150"></a>
 </div>
