Add CSS transition for image cards

--- a/views/monsters/index.ejs
+++ b/views/monsters/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Encounterly - A D&D Encounter Builder</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <script src="/js/load-effect.js"></script>
 </head>
 
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
