--- a/public/css/main.css
+++ b/public/css/main.css
@@ -310,8 +310,8 @@ button:hover {
   align-items: center;
   border: .5vmin solid #043142;
   border-radius: 1vmin;
-  height: 40vmin;
-  width: 40vmin;
+  height: 30vmin;
+  width: 30vmin;
   overflow: hidden;
   gap: 2vmin;
 }
@@ -427,6 +427,23 @@ button:hover {
   align-items: flex-start;
   gap: 14vmin;
   padding-bottom: 4vmin;
+}
+.characters {
+  opacity: 0;
+}
+
+.fade-in {
+    animation: fadeInAnimation ease 3s forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
