Add custom favicon

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Encounterly - A D&D Encounter Builder</title>
   <link rel="stylesheet" href="/css/main.css" />
+  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/XeR8XUQ.png" alt="Image of giant monster eye" />
 </head>
 
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
-  <!-- Home Page's Content -->
-  <div class="wrapper">
+  <div class="wrapper fade-in">
     <%- include('./partials/header.ejs') %>
+    <img src="https://i.imgur.com/ws1MM24.png" style="max-height:60vmin;" alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
       <main>
         <div class="overlay-div">
           <div class="side">
