--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,14 +9,14 @@
   <link rel="icon" type="image/x-icon" href="https://i.imgur.com/XeR8XUQ.png" alt="Image of giant monster eye" />
 </head>
 
-<body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
+<body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)" alt="Image of brick dungeon wall">
   <div class="wrapper fade-in">
     <%- include('./partials/header.ejs') %>
     <img src="https://i.imgur.com/ws1MM24.png" style="max-height:60vmin;" alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
       <main>
         <div class="overlay-div">
           <div class="side">
-            <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300">
+            <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300" alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
             <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Euismod et habitant ex fames purus proin dui elit.
               Curabitur posuere aptent accumsan ad a suscipit maximus tempus. Mi nam scelerisque eleifend hac molestie
               nam adipiscing. Egestas molestie egestas scelerisque; eleifend ipsum vulputate quam. Feugiat consequat
@@ -27,7 +27,7 @@
               Curabitur posuere aptent accumsan ad a suscipit maximus tempus. Mi nam scelerisque eleifend hac molestie
               nam adipiscing. Egestas molestie egestas scelerisque; eleifend ipsum vulputate quam. Feugiat consequat
               donec in sociosqu est pulvinar risus. Volutpat a sit; vulputate magnis platea mus pretium sapien.</p>
-            <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300">
+            <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300" alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
           </div>
           <div class="blank">
             <h1>Ready for effortless encounters?</h1>
