--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<nav>
+<nav class="transparent">
   <a href="/">Home</a>
   <div>
     <!-- Above renders whether signed in or not -->
@@ -8,7 +8,7 @@
       <a href="/encounters">Encounters</a>
       <a href="/auth/sign-out">SIGN OUT</a>
       <span>
-        <%= user.username %>
+        Welcome, <%= user.username %>
       </span>
       <% } else { %>
         <a href="/auth/sign-up">SIGN UP</a>
