Add monster show page css styling

--- a/views/encounters/edit.ejs
+++ b/views/encounters/edit.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Encounterly - Edit Encounters</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/XeR8XUQ.png" alt="Image of giant monster eye" />
 </head>
 
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
