--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,18 +16,20 @@
       <main>
         <div class="overlay-div">
           <div class="side">
+            <div class="inner-container">
             <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300" alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
             <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Euismod et habitant ex fames purus proin dui elit.
               Curabitur posuere aptent accumsan ad a suscipit maximus tempus. Mi nam scelerisque eleifend hac molestie
               nam adipiscing. Egestas molestie egestas scelerisque; eleifend ipsum vulputate quam. Feugiat consequat
               donec in sociosqu est pulvinar risus. Volutpat a sit; vulputate magnis platea mus pretium sapien.</p>
-          </div>
-          <div class="side">
-            <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Euismod et habitant ex fames purus proin dui elit.
-              Curabitur posuere aptent accumsan ad a suscipit maximus tempus. Mi nam scelerisque eleifend hac molestie
-              nam adipiscing. Egestas molestie egestas scelerisque; eleifend ipsum vulputate quam. Feugiat consequat
-              donec in sociosqu est pulvinar risus. Volutpat a sit; vulputate magnis platea mus pretium sapien.</p>
-            <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300" alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
+            </div>
+              <div class="inner-container">
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Euismod et habitant ex fames purus proin dui elit.
+                  Curabitur posuere aptent accumsan ad a suscipit maximus tempus. Mi nam scelerisque eleifend hac molestie
+                  nam adipiscing. Egestas molestie egestas scelerisque; eleifend ipsum vulputate quam. Feugiat consequat
+                  donec in sociosqu est pulvinar risus. Volutpat a sit; vulputate magnis platea mus pretium sapien.</p>
+                <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300" alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
+              </div>
           </div>
           <div class="blank">
             <h1>Ready for effortless encounters?</h1>
