--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<nav class="transparent">
+<nav class="translucent">
   <a href="/">Home</a>
   <div>
     <!-- Above renders whether signed in or not -->
