--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,7 +139,8 @@ button:hover {
 
 .side {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
   padding: 3em;
   background-color: #9bc4d4;
   border-radius: 7vmin;
@@ -148,6 +149,7 @@ button:hover {
   gap: 4vmin;
   font-size: 1em;
   width: 95%;
+  padding-bottom: 12vmin;
 }
 
 .side p {
@@ -254,7 +256,8 @@ button:hover {
   width: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
   border-radius: 2.5vmin;
 }
 
@@ -373,7 +376,6 @@ button:hover {
 .delete {
   background-color: #043142;
   color: #eff5f7;
-  height: 3vmin;
   font-size: 1em;
 }
 
@@ -441,7 +443,42 @@ button:hover {
 }
 
 .translucent {
-  background-color: #0c5876a2;
+  background-color: #1d7a9ec1;
+}
+
+.monster-break {
+  width: 80%;
+  height: .5vmin;
+  border-width:0;
+  color: #043142;
+  background-color: #043142;
+}
+
+.monster-row {
+  display: flex;
+  flex-direction: row;
+  gap: 4vmin;
+}
+
+.monster-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.monster-space {
+  width: 50%;
+}
+
+.column-space {
+  width: 30%;
+}
+
+.ability h4 {
+  font-style: italic;
+}
+
+.mobile-hr {
+  display: none;
 }
 
 @keyframes fadeInAnimation {
@@ -453,6 +490,11 @@ button:hover {
         opacity: 1;
     }
 }
+
+.partial-width {
+  width: 75%;
+}
+
 
 @media only screen and (max-width: 1024px) {
   #monsters {
@@ -473,12 +515,6 @@ button:hover {
   padding: 8vmin 18vmin;
   }
 
-.side {
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 12vmin;
-  }
-
   .inner-container {
     display: flex;
     flex-direction: column;
@@ -486,6 +522,30 @@ button:hover {
     padding-bottom: 12vmin;
     gap: 8vmin;
   }
+
+  .partial-width {
+    width: 100%;
+    text-align: center;
+  }
+
+  .monster-row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .monster-column {
+    align-items: center;
+    text-align: center;
+  }
+
+ .mobile-hr {
+  display: block;
+  width: 100%;
+  height: .5vmin;
+  border-width:0;
+  color: #043142;
+  background-color: #043142;
+ } 
 
 }
 
