--- a/views/monsters/index.ejs
+++ b/views/monsters/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Encounterly - A D&D Encounter Builder</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/XeR8XUQ.png" alt="Image of giant monster eye" />
     <script src="/js/load-effect.js"></script>
 </head>
 
