--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -7,6 +7,7 @@
     <title>Encounterly - Your Players</title>
     <link rel="stylesheet" href="/css/main.css" />
     <script src="/js/load-effect.js"></script>
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/XeR8XUQ.png" alt="Image of giant monster eye" />
 </head>
 
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
