--- a/views/builder/index.ejs
+++ b/views/builder/index.ejs
@@ -11,7 +11,8 @@
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
     <!-- Home Page's Content -->
     <%- include('../partials/header.ejs') %>
-        <div class="wrapper">
+    <img src="https://i.imgur.com/ws1MM24.png" style="max-height:18vmin;max-width: 32vmin;margin: auto;" class="fade-in" alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
+        <div class="wrapper fade-in">
             <div class="builder-container">
                 <div class="builder-wrapper">
                     <%- include('../partials/monsters.ejs') %>
