--- a/views/monsters/show.ejs
+++ b/views/monsters/show.ejs
@@ -13,7 +13,7 @@
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
     <%- include('../partials/header.ejs') %>
         <div class="center">
-            <div class="player">
+            <div class="player fade-in">
                 <div class="player-items">
                     <h1>
                         <%= monster.name %>
