--- a/views/monsters/index.ejs
+++ b/views/monsters/index.ejs
@@ -12,6 +12,7 @@
 
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
     <%- include('../partials/header.ejs') %>
+    <img src="https://i.imgur.com/ws1MM24.png" style="max-height:18vmin;max-width: 32vmin;margin: auto;" class="fade-in" alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
         <div class="wrapper">
             <div class="player pad-btm">
                 <div class="player-items">
